# piyasa_chat_bot

./: .coveragerc  .dockerignore  .env  .env.example  .flake8  .gitignore  4worker_test_results.txt  App.css  App.jsx  BotMemories.jsx  Bots.jsx  CLAUDE.md  Chats.jsx  Dashboard.jsx  Dockerfile.api  Dockerfile.backup  Dockerfile.frontend  FINAL_SISTEM_RAPORU_SESSION42.md  Kurulum  Logs.jsx  NEXT_STEPS_ACTION_PLAN.md  PHASE1_QUICKSTART.md  PHASE2_SUMMARY.md  PHASE2_TEST_RESULTS.md  PLAN.md  PROFESSIONAL_ROADMAP.md  PROGRESS_CHECKPOINT.md  QUICK_START.md  QuickStart.jsx  README.md  ROADMAP_COMPLETION_REPORT.md  ROADMAP_MEMORY.md  RUNBOOK.md  Readme_Basic  SESSION42_OZET.md  SESSION43_FINAL_REPORT.md  SESSION43_TAMAMLANDI.md  SESSIONS_9-13_REPORT.md  SESSION_14_REPORT.md  SESSION_15_PLAN.md  (+91 more)
.claude/: auto-context.md  code-review-checklist.md  decision-tree.md  memory.json  project-context.md  settings.local.json  shortcuts.md
.github/workflows/: codeql.yml  docker-build.yml  test.yml  validate-roadmap.yml  windows-setup.yml
alembic/: env.py
alembic/versions/: c0f071ac6aaa_add_performance_indexes_session15.py  fe686589d4eb_initial_migration.py
backend/api/: dependencies.py
backend/behavior/: __init__.py  bot_selector.py  deduplication.py  message_processor.py  message_utils.py  micro_behaviors.py  persona_manager.py  reply_handler.py  topic_manager.py  utilities.py
backend/behavior_engine/: __init__.py  message_generator.py  metadata_analyzer.py
backend/caching/: __init__.py  bot_cache_helpers.py  cache_manager.py  lru_cache.py  message_cache_helpers.py  redis_cache.py
backend/metrics/: __init__.py  prometheus_exporter.py
backend/resilience/: __init__.py  circuit_breaker.py  retry_policy.py
components/: ActivityCenter.jsx  EmptyState.jsx  HealthDashboard.jsx  InlineNotice.jsx  LoginPanel.jsx  SetupWizard.jsx  ThemeProvider.jsx  ThemeToggle.jsx  ToastProvider.jsx  Typography.jsx  ViewModeToggle.jsx  Wizard.jsx
components/ui/: badge.jsx  button.jsx  card.jsx  dialog.jsx  filter-select.jsx  form.jsx  input.jsx  label.jsx  progress.jsx  search-input.jsx  select.jsx  sidebar.jsx  skeleton.jsx  slider.jsx  switch.jsx  table.jsx  (+3 more)
docs/: BACKUP_DISASTER_RECOVERY.md  CI_CD.md  DATABASE_BACKUP_AUTOMATION.md  DISASTER_RECOVERY.md  K8S_DEPLOYMENT.md  K8S_VALIDATION_REPORT.md  LLM_BATCH_GENERATION_GUIDE.md  MONITORING_INTEGRATION_GUIDE.md  POSTGRESQL_MIGRATION_GUIDE.md  PRODUCTION_DEPLOYMENT.md  USAGE_GUIDE.md  UX_IMPLEMENTATION_GUIDE.md  admin_user_usage.md  baseline_performance_report.md  bot_memory_system.md  database_optimization_report.md  error_management.md  interactive_style_guide.md  load_test_findings.md  panel_user_experience_plan.md  phase1_implementation_summary.md  phase1_testing_guide.md  reporting_roadmap.md  session38_final_report.md  session_41_load_test_findings.md  system_analysis.md  system_validation_report.md  ui_ux_research_plan.md  ux-improvement-suggestions.md
k8s/: README.md
lib/: design-tokens.ts
monitoring/: prometheus.yml
scripts/: auto_generate_memories.py  backup_database.py  baseline_load_test.py  cleanup_memories.py  docker_backup.sh  generate_readme_resources.py  migrate_sqlite_to_postgres.py  oneclick.py  production_load_test.py  profile_queries.py  restore_database.py  setup_backup_cron.sh  setup_backup_windows.ps1  stress_test.py  test_query_optimization.py  validate_session38_integration.py
src/: main.jsx
test_dr/: DR_TEST_RESULTS.md
tests/: apiClient.test.js  baseline_load_test.py  conftest.py  load_test_report_1760521972.json  manual_incoming_test.py  patched_testclient.py  setup.js  test_api_flows.py  test_behavior_engine.py  test_behavior_engine_history_transcript.py  test_behavior_engine_message_length.py  test_circuit_breaker.py  test_content_filters.py  test_incoming_message_system.py  test_llm_batch.py  test_llm_client_reactions.py  test_load_phase2.py  test_phase1_validation.py  test_quickstart_readme.py  test_security_rbac.py  test_settings_regression.py
(+52 files in other folders)
