# pyproject.toml - Python project configuration
# Tools: black, isort, mypy, coverage, pytest

[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "piyasa_chat_bot"
version = "1.5.0"
description = "Telegram market simulation chatbot system"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "piyasa_chat_bot contributors"}
]
keywords = ["telegram", "bot", "market", "simulation", "chatbot"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[tool.black]
# Black code formatter configuration
line-length = 120
target-version = ['py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
/(
  # Directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | node_modules
  | alembic/versions
  | frontend
)/
'''

[tool.isort]
# isort import sorting configuration
profile = "black"
line_length = 120
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true
skip = [
    ".venv",
    "venv",
    "env",
    "build",
    "dist",
    "node_modules",
    "alembic/versions",
    "frontend",
]
known_first_party = ["backend", "database", "schemas", "security", "llm_client", "telegram_client"]
known_third_party = ["fastapi", "sqlalchemy", "redis", "pydantic", "pytest"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.mypy]
# MyPy static type checker configuration
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
disallow_untyped_calls = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_optional = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
show_column_numbers = true
pretty = true

# Exclude paths
exclude = [
    "^alembic/versions/",
    "^build/",
    "^dist/",
    "^node_modules/",
    "^frontend/",
    "^\\.venv/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
# Pytest configuration (also in pytest.ini)
minversion = "8.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --strict-markers --tb=short"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "engine: marks tests as behavior engine tests",
]

[tool.coverage.run]
# Coverage.py configuration (also in .coveragerc)
source = ["."]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
    "*/site-packages/*",
    "*/conftest.py",
    "*/scripts/*",
    "*/alembic/*",
]
branch = true

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "raise AssertionError",
    "@abstractmethod",
    "\\.\\.\\.",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

[tool.bandit]
# Bandit security linter configuration
exclude_dirs = [
    "/tests/",
    "/.venv/",
    "/venv/",
    "/build/",
    "/dist/",
    "/alembic/",
    "/frontend/",
]
skips = [
    "B101",  # assert_used (okay in tests)
    "B601",  # paramiko calls (not used)
]
